# poc-polars

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
app/: main.py
cloudflare/: api.py  models.py
configuration/: config.py  config_builder.py  env_file.py  env_vars.py
flightradar/: api.py
shared/: pydantic_extensions.py
tests/: test_main.py
tests/configuration/: test_env_vars.py
